fix dark mode code highlighting color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,7 +24,7 @@
 /* If you have a different syntax highlighting theme for dark mode. */
 [data-theme='dark'] {
   /* Color which works with dark mode syntax highlighting theme */
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.1);
 }
 
 .docusaurus-highlight-code-line {
